--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-<!-- frontend/index.html -->
 <!doctype html>
 <html>
 <head>
@@ -12,13 +11,19 @@
     <h1>Chimera UI — Cards</h1>
     <div class="controls">
       <button id="newCardBtn">+ New Card</button>
+      <button id="connectModeBtn">Connect Mode</button>
+      <button id="regridBtn">Re-grid</button>
       <button id="refreshBtn">Refresh</button>
       <span id="saveStatus">idle</span>
     </div>
   </header>
 
   <main class="container">
-    <section id="cardsColumn" class="cards-column" aria-label="Cards list"></section>
+    <!-- Board: cards + connection layer -->
+    <section class="board">
+      <svg id="connectionLayer" class="connection-layer"></svg>
+      <section id="cardsColumn" class="cards-column" aria-label="Cards list"></section>
+    </section>
 
     <aside id="rightPanel" class="right-panel">
       <h3>Story (plain)</h3>
@@ -28,10 +33,22 @@
       </div>
 
       <h3>Memory search</h3>
-      <input id="searchMem" placeholder="Search memory..." />
+      <input id="searchMem" placeholder="Search memory." />
       <div id="memResults"></div>
     </aside>
   </main>
+
+  <!-- Visual Story Views -->
+  <section class="viz-panel">
+    <div class="viz-tabs">
+      <button class="viz-tab active" data-vtab="mindmap">Mind Map</button>
+      <button class="viz-tab" data-vtab="beam">Relations (Beam)</button>
+    </div>
+    <div class="viz-body">
+      <div id="mindmapView" class="viz-view active" aria-label="Mind map of scenes"></div>
+      <div id="beamView" class="viz-view" aria-label="Character–scene relations"></div>
+    </div>
+  </section>
 
   <!-- conflict modal -->
   <div id="conflictModal" class="modal hidden" role="dialog" aria-modal="true">
@@ -48,6 +65,9 @@
 
   <template id="cardTpl">
     <article class="card" draggable="true">
+      <!-- Pin -->
+      <button class="pinBtn" type="button" aria-label="Pin card">●</button>
+
       <div class="cardHeader">
         <input class="cardTitle" placeholder="Title" />
         <div class="cardControls">
@@ -60,7 +80,7 @@
         </div>
       </div>
       <div class="cardBody">
-        <textarea class="cardContent" placeholder="Write details..."></textarea>
+        <textarea class="cardContent" placeholder="Write details."></textarea>
         <div class="tagRow"></div>
         <div class="cardActions">
           <button class="addTag">+ tag</button>
